--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Chat with the infamous Rick Sanchez!",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
